langtools/test/tools/javac/annotations/repeatingAnnotations/MissingDefaultCase2.out
MissingDefaultCase2.java:12:1: compiler.err.invalid.containedby.annotation.elem.nondefault: FooContainer, other()
1 error
